--- a/css/estilo_cadastro.css
+++ b/css/estilo_cadastro.css
@@ -94,8 +94,8 @@ body
         }
         .logo
         {
-            top: 40px;
-            width: 35%;
+            margin-top: 40px;
+            width: 45%;
             height: 25vh;
         }
         .fieldset1
