--- a/css/estilo_pagamento.css
+++ b/css/estilo_pagamento.css
@@ -482,7 +482,7 @@ a
     border-style: solid;
     border-radius: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-content: center;
     align-items: center;
     justify-content: space-evenly;
@@ -517,7 +517,7 @@ a
     border-style: solid;
     border-radius: 20px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-content: center;
     align-items: center;
     justify-content: space-evenly;
@@ -613,12 +613,70 @@ a
     flex-direction: column;
     border-radius: 15px;
 }
+.dados3
+{
+    background-color:rgba(255, 255, 255, 0.742);
+    height: 100px;
+    width: 98%;
+    font-size: 15px;
+    display:none;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center; 
+    flex-direction: column;
+    border-radius: 15px;
+}
 .cod
 {
     margin-top: 20px;
     font-size: cursive;
 }
-
+.fildinho
+{
+    width: 80%;
+    height: 20px;
+    font-size: 12px;
+    display: flex;
+    border-style: solid;
+    border-color: transparent;
+    display:flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center; 
+    flex-direction: column;
+}
+.caixinha
+{
+    width: 100%;
+    height: 3vh;
+    border-color:rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+}
+.caixinha1
+{
+    width: 100%;
+    height: 500px;
+    border-color:rgb(0, 0, 0);
+    border-style: solid;
+    border-radius: 5px;
+    border-width: 1px;
+}
+.repartir
+{
+    width: 80%;
+    height: 500px;
+    background-color: rgb(225, 59, 59);
+    display:flex;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: center; 
+    flex-direction: row;
+}
   
  
 
