--- a/css/estilo_carrinho.css
+++ b/css/estilo_carrinho.css
@@ -245,3 +245,96 @@ body
 {
     background-image:radial-gradient(rgba(255, 255, 255, 0.589),rgba(44, 119, 119, 0.617))
 }
+.inteiro
+{
+    /*background-color: black;*/
+    width: 100%;
+    height: 85%;
+    margin-top:80px;
+    position: absolute;
+    display: flex;
+    flex-direction:column ;
+}
+.intro
+{
+
+    /*background-color: white;*/
+    width: 110%;
+    height: 15%;
+    margin-top:30px;
+    position: absolute;
+    display: flex;
+    flex-direction:column ;
+    font-size: 50PX;
+    padding-left: 65px;
+   
+
+}
+
+
+.intro p
+{
+    font-size: 15PX;
+    margin-top: 0px;
+    ;
+
+}
+.inteiro2
+{
+    /*background-color: white;*/
+    border-color: black;
+    border: 2px;
+    border-style: solid;
+    width: 90%;
+    height: 70%;
+    position: absolute;
+    display: flex;
+    flex-direction:column ;
+    z-index: 2;
+    margin-top: 130px;
+    margin-left: 70px;
+    overflow-y: scroll;
+}
+.botoes
+{
+
+    /*background-color: orange;*/
+    width: 110%;
+    height: 15%;
+    margin-top:620px;
+    position: absolute;
+    display: flex;
+    flex-direction:row ;
+    font-size: 50PX;padding-left: 80px;
+  
+    
+    
+   
+
+}
+.limpar
+{
+    background-color: rgba(255, 0, 0, 0.733);
+    font-size: 15px;
+    width: 200px;
+    height: 70px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    margin-left: 1000px;
+    display: flex;
+}
+.comprar
+{
+    background-color: rgba(0, 128, 0, 0.781);
+    font-size: 15px;
+    width: 200px;
+    height: 70px;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+   display: flex;
+    margin-left:10px;
+}
