--- a/css/estilo_carrinho.css
+++ b/css/estilo_carrinho.css
@@ -327,7 +327,10 @@ body
     align-content: center;
     margin-left: 1000px;
     display: flex;
+
+    
 }
+
 .comprar
 {
     background-color: rgba(0, 128, 0, 0.781);
@@ -343,4 +346,6 @@ body
     align-content: center;
    display: flex;
     margin-left:10px;
+    text-decoration: none;
+
 }
