--- a/css/estilo_carrinho.css
+++ b/css/estilo_carrinho.css
@@ -346,6 +346,11 @@ body
     align-content: center;
    display: flex;
     margin-left:10px;
-    text-decoration: none;
+    
 
+}
+a
+{
+ text-decoration: none;
+ color:black;
 }
