--- a/css/estilo_carrinho.css
+++ b/css/estilo_carrinho.css
@@ -282,7 +282,7 @@ body
 .inteiro2
 {
     background-color: rgba(255, 255, 255, 0.719);
-    border-color: black;
+    border-color:rgba(19, 113, 98, 0.719);
     border: 2px;
     border-style: solid;
     width: 90%;
